# musiclib

./: .gitignore  CMakeLists.txt  README.md  musiclib-qt.desktop  musiclib.dsv  org.musiclib.musiclib.desktop  temp_diagnose_kconfigxt.sh
cmake/: MusicLibConfig.cmake.in  check_dsv_schema.cmake
config/: dsv_schema.conf  k3brc  musiclib.conf  musiclib.conf_build  musiclib.confold  tag_excludes.conf  tag_schema.conf
config/servicemenus/: musiclib-rate.desktop
config/systemd/: musiclib-mpris.service
docs/: ARCHITECTURE.md  BACKEND_API.md  DEPLOYMENT_PATHS.md  DEVELOPMENT.md  LOCK_CONTENTION_RESOLUTION.md  MUSICLIB_USER_MANUAL.md  MusicLib_KDE_Feature_Evaluation.md  MusicLib_KDE_Feature_Evaluation_Supplement.txt  Phase1_Task1_CMake_Setup_Subtasks.md  README.md  SCRIPTS_SUMMARY.md  UPDATED_FILES.md  musiclib_cli_dispatcher.md  musiclib_cli_proposed_changes.md
docs/adr/: ADR-001-shell-backend.md  ADR-002-thin-cli-dispatcher.md  ADR-003-dsv-over-sqlite.md  ADR-004-flock-locking.md  ADR-005-rename-crash-safety.md  ADR-006-json-error-contract.md  ADR-007-bash-sourceable-config.md  ADR-008-synthetic-mobile-timestamps.md  ADR-009-deferred-operations-queue.md
docs/reference/: Appendix A: Quick Reference.txt  audtool.md  id3v2.3.0.md  kid3-cli.md  mp4ra_atoms.md  mp4ra_specs_music.md  ogg_bitstream_overview.md  ogg_framing.md  vorbis_comment_spec.md
man/: musiclib-cli.1
scripts/: build.sh  clean.sh  install-deps.sh  regen_task_list.sh
src/cli/: CMakeLists.txt  cli_utils.cpp  cli_utils.h  command_handler.cpp  command_handler.h  main.cpp  output_streams.h
src/common/: CMakeLists.txt  config_loader.cpp  db_reader.cpp  json_parser.cpp  script_executor.cpp  utils.cpp
src/gui/: CMakeLists.txt  albumwindow.cpp  albumwindow.h  cdrippingpanel.cpp  cdrippingpanel.h  configuretoolbarsdialog.cpp  configuretoolbarsdialog.h  confwriter.cpp  confwriter.h  librarymodel.cpp  librarymodel.h  libraryview.cpp  libraryview.h  main.cpp  maintenancepanel.cpp  maintenancepanel.h  mainwindow.cpp  mainwindow.h  mobile_panel.cpp  mobile_panel.h  musiclib.kcfg  musiclibui.rc  ratingdelegate.cpp  ratingdelegate.h  scriptrunner.cpp  scriptrunner.h  settingsdialog.cpp  settingsdialog.h  smartplaylistpanel.cpp  smartplaylistpanel.h  systemtrayicon.cpp  systemtrayicon.h
tests/: CMakeLists.txt  test_config_loader.cpp  test_db_reader.cpp  test_init_config.sh  test_script_executor.cpp
tests/data/: test_musiclib.conf
